# hyprland-qtutils

./: .gitignore  CMakeLists.txt  README.md  flake.nix
nix/: default.nix  overlays.nix  shell.nix
utils/dialog/: CMakeLists.txt  Dialog.cpp  Dialog.hpp  main.cpp  main.qml
utils/donate-screen/: CMakeLists.txt  DonateScreen.cpp  DonateScreen.hpp  main.cpp  main.qml
utils/update-screen/: CMakeLists.txt  Dialog.cpp  Dialog.hpp  UpdateScreen.cpp  UpdateScreen.hpp  dialogMain.qml  main.cpp  main.qml
